--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,7 +2,7 @@
     <!-- Base application theme. -->
     <style name="Base.Theme.TaskRemainderApp" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
-        <item name="colorPrimary">@color/status_bar</item>
+        <item name="colorPrimary">@color/slate_gray</item>
     </style>
 
     <style name="Theme.TaskRemainderApp" parent="Base.Theme.TaskRemainderApp" />
